# HaliVerExperiments

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE.txt  README.md  RunExperiments.ipynb  TestSetup.ipynb  camera_pipe.ipynb  clean.sh  install.sh  preprocess.py  table.tex
camera_pipe/: camera_pipe_mem.c  camera_pipe_mem.pvl  camera_pipe_mem_v2.c
results/: 2023-05-12-23-10_line_info.json  2023-05-12-23-10_results_verification.json  2023-10-09-18-59_line_info.json  2023-10-09-18-59_results_verification.json
src/: auto_viz.cpp  bilateral_grid.cpp  blur.cpp  camera_pipe.cpp  conv_layer.cpp  depthwise_separable_conv.cpp  gemm.cpp  hist.cpp
tutorial/: lesson1.cpp  lesson2.cpp  lesson3.cpp  lesson3_limits_0.c  tutorial.cpp
